# A-MAZE-ING

./: .gitignore  Makefile  README.md  README1.md  a_maze_ing.py  config.txt  generator_entery.py  maze.txt  menu.py  my_file  null.txt  output_maze.txt  project_README.md  pyproject.toml
algorithm/: __init__.py  ascii_landing.py  clear.py  for_later_readme.md  maze_generator.py  maze_renderer.py  maze_solver.py  output_maze.txt  start.py  theme_palette.py
algorithm/ignore/: notes.txt  test.py
algorithm/not_included/: blocks_simulation.psd
mazegen/: maze_generator.py
not_included/: 42.psd
parsing/: README.md  __init__.py  config.txt  parse_data.py
